Update and rename 0_index.mdx to 00_index.mdx

--- a/apps/site/src/_pages/legal/00_index.mdx
+++ b/apps/site/src/_pages/legal/00_index.mdx
@@ -15,7 +15,7 @@ topics:
 
 - [Terms of Service](/legal/terms)
 - [Corporate Terms of Service](/legal/terms-corporate)
-- [Terms for Additional Products and Features](/legal/terms/product)
+- [Terms for Additional Products and Features](/legal/terms/products)
 - [Community Guidelines](/legal/community)
 - [Acceptable Use Policy](/legal/acceptable-use)
   - [Bullying and Harassment](/legal/acceptable-use/bullying)
