--- a/apps/site/src/_pages/legal/terms/00_index.mdx
+++ b/apps/site/src/_pages/legal/terms/00_index.mdx
@@ -55,7 +55,7 @@ Version Effective Date: February 28, 2023
 5.  “Block Protocol,” “We,” and “Us” refer to _HASH, Inc._, as well as our affiliates, directors, subsidiaries, contractors, licensors, officers, agents, and employees.
 6.  The “Service” refers to the applications, software, products, and services provided by Block Protocol, including any Beta Previews.
 7.  “The User,” “You,” and “Your” refer to the individual person, company, or organization that has visited or is using the Website or Service; that accesses or uses any part of the Account; or that directs the use of the Account in the performance of its functions. A User must be at least 13 years of age. Special terms may apply for business or government Accounts (See [Section B(5): Additional Terms](#5-additional-terms)).
-8.  The “Website” refers to Block Protocol’s website located at [blockprotocol.org](https://blockprotocol.org/), and all content, services, and products provided by Block Protocol at or through the Website. It also refers to Block Protocol-owned subdomains of blockprotocol.org, such as [static.blockprotocol.org](https://static.blockprotocol.org/). These Terms also govern Block Protocol’s educational websites, such as [hash.dev](https://hash.dev/); community and events websites, such as [community.hash.ai](https://community.hash.ai/); and product websites, such as [hash.ai](https://hash.ai/). Occasionally, websites owned by Block Protocol may provide different or additional terms of service. If those additional terms conflict with this Agreement, the more specific terms apply to the relevant page or service.
+8.  The “Website” refers to Block Protocol’s website located at [blockprotocol.org](https://blockprotocol.org/), and all content, services, and products provided by Block Protocol at or through the Website. It also refers to Block Protocol-owned subdomains of blockprotocol.org, such as [static.blockprotocol.org](https://static.blockprotocol.org/). These Terms also govern Block Protocol’s educational websites, such as [hash.dev](https://hash.dev/); community and events websites, such as the [HASH Discord Server](https://hash.ai/discord); and product websites, such as [hash.ai](https://hash.ai/). Occasionally, websites owned by Block Protocol may provide different or additional terms of service. If those additional terms conflict with this Agreement, the more specific terms apply to the relevant page or service.
 
 ### B. Account Terms
 
@@ -79,7 +79,7 @@ We have a few simple rules for Personal Accounts on Block Protocol's Service.
 - One person or legal entity may maintain no more than one free Account.
 - You must be age 13 or older. While we are thrilled to see brilliant young coders get excited by learning to program and building blocks, we must comply with United States law. Block Protocol does not target our Service to children under 13, and we do not permit any Users under 13 on our Service. If we learn of any User under the age of 13, we will [terminate that User’s Account immediately](#l.-cancellation-and-termination). If you are a resident of a country outside the United States, your country’s minimum age may be older; in such a case, you are responsible for complying with your country’s laws.
 - Your login may only be used by one person — i.e., a single login may not be shared by multiple people. A paid Organization may only provide access to as many Personal Accounts as your subscription allows.
-- You may not use Block Protocol in violation of export control or sanctions laws of the United States or any other applicable jurisdiction. You may not use Block Protocol if you are or are working on behalf of a [Specially Designated National (SDN)](https://www.treasury.gov/resource-center/sanctions/SDN-List/Pages/default.aspx) or a person subject to similar blocking or denied party prohibitions administered by a U.S. government agency. Block Protocol may allow persons in certain sanctioned countries or territories to access certain HASH services pursuant to U.S. government authorizations. For more information, please see the HASH [Export & Trade policy](https://hash.ai/legal/trade-policy), which also applies to the Block Protocol.
+- You may not use Block Protocol in violation of export control or sanctions laws of the United States or any other applicable jurisdiction. You may not use Block Protocol if you are or are working on behalf of a [Specially Designated National (SDN)](https://www.treasury.gov/resource-center/sanctions/SDN-List/Pages/default.aspx) or a person subject to similar blocking or denied party prohibitions administered by a U.S. government agency. Block Protocol may allow persons in certain sanctioned countries or territories to access certain HASH services pursuant to U.S. government authorizations. For more information, please see the HASH [Export & Trade policy](https://hash.ai/legal/trust-safety/sanctions), which also applies to the Block Protocol.
 
 #### 4. Account Security
 
@@ -93,9 +93,9 @@ You are responsible for keeping your Account secure while you use our Service. W
 
 In some situations, third parties' terms may apply to your use of Block Protocol. For example, you may be a member of an organization on Block Protocol with its own terms or license agreements; you may download an application that integrates with Block Protocol; or you may use Block Protocol to authenticate to another service. Please be aware that while these Terms are our full agreement with you, other parties' terms govern their relationships with you.
 
-If you are a government User or otherwise accessing or using any Block Protocol Service in a government capacity, the [Government Amendment to the Block Protocol Terms of Service](/legal/terms/government) applies to you, and you agree to its provisions.
+If you are a government User or otherwise accessing or using any Block Protocol Service in a government capacity, the [HASH Terms of Service](https://hash.ai/legal/terms) and [Government Amendment to the HASH Terms of Service](https://hash.ai/legal/terms/government) apply to you, and you agree to their provisions.
 
-If you have signed up for Block Protocol Enterprise, the [Enterprise Addendum](/legal/terms/enterprise) applies to you, and you agree to its provisions.
+If you have signed up for Block Protocol Enterprise, the the [HASH Terms of Service](https://hash.ai/legal/terms) and [HASH Enterprise Addendum](https://hash.ai/legal/terms/enterprise) apply to you, and you agree to their provisions.
 
 ### C. Acceptable Use
 
@@ -173,9 +173,9 @@ Block Protocol will provide notice regarding our access to private project conte
 
 ### F. Copyright Infringement and DMCA Policy
 
-If you believe that content on the Block Protocol website violates your copyright, please contact us in accordance with the HASH [Copyrighted Materials (DMCA) Policy](https://hash.ai/legal/copyright). If you are a copyright owner and you believe that content on Block Protocol violates your rights, please contact us in accordance with the steps outlined in our public HASH [DMCA Takedown Notice submission guidelines](https://hash.ai/legal/copyright-dmca-notice), which outlines the process and contact route via which copyright notices can be served to the Block Protocol. There may be legal consequences for sending a false or frivolous takedown notice. Before sending a takedown request, you must consider legal uses such as fair use and licensed uses.
+If you believe that content on the Block Protocol website violates your copyright, please contact us in accordance with the HASH [Copyrighted Materials (DMCA) Policy](https://hash.ai/legal/ip/copyright). If you are a copyright owner and you believe that content on Block Protocol violates your rights, please contact us in accordance with the steps outlined in our public HASH [DMCA Takedown Notice submission guidelines](https://hash.ai/legal/ip/copyright-notice), which outlines the process and contact route via which copyright notices can be served to the Block Protocol. There may be legal consequences for sending a false or frivolous takedown notice. Before sending a takedown request, you must consider legal uses such as fair use and licensed uses.
 
-We will terminate the Accounts of [repeat infringers](/legal/copyright/#e.-repeated-infringement) of this policy.
+We will terminate the Accounts of [repeat infringers](https://hash.ai/legal/ip/copyright#e-repeated-infringement) of this policy.
 
 ### G. Intellectual Property Notice
 
@@ -187,7 +187,7 @@ Block Protocol and our licensors, vendors, agents, and/or our content providers 
 
 #### 2. Block Protocol Trademarks and Logos
 
-If you’d like to use Block Protocol trademarks, you must follow all of our trademark guidelines, including those outlined on the [Brand](/about/brand) page.
+If you’d like to use Block Protocol trademarks, you must follow all of our trademark guidelines, including those outlined on the HASH [Brand](https://hash.ai/brand) page.
 
 ### H. API Terms
 
