--- a/apps/site/src/_pages/docs/5_faq.mdx
+++ b/apps/site/src/_pages/docs/5_faq.mdx
@@ -186,7 +186,7 @@ Rich text editing is a core part of many modern block-based applications, but de
 - applications often provide special functionality inside rich text fields, e.g. being able to `@mention` or search for things inline
 
 We do not believe it feasible or desirable to impose a single rich text editing experience across applications,
-and instead have introduced the [Hook Module](https://blockprotocol.org/spec/hook-module) to allow embedding applications to
+and instead have introduced the [Hook Module](https://blockprotocol.org/spec/hook) to allow embedding applications to
 inject their own rich text editing display and input, at blocks' request.
 
 </FAQ>
