--- a/apps/site/src/_pages/docs/5_faq.mdx
+++ b/apps/site/src/_pages/docs/5_faq.mdx
@@ -386,7 +386,7 @@ Moving beyond a single set of constrained schemas that rarely change introduces 
 
 <FAQ question="Why JSON Schema for describing entity structure?">
 
-JSON Schema has a rich [vocabulary for validating data](https://json-schema.org/draft/2020-12/json-schema-validation.html). We designed the Block Protocol with content management systems and collaborative workspaces in mind, and being able to define precise constraints for data is important for those applications.
+JSON Schema has a rich [vocabulary for validating data](https://json-schema.org/draft/2020-12/json-schema-validation). We designed the Block Protocol with content management systems and collaborative workspaces in mind, and being able to define precise constraints for data is important for those applications.
 
 We expect to have to add custom keywords to cover relationships which JSON Schema does not have in its core vocabulary (e.g. that a property is `inverseOf` another), but believe it will be easiest to start with JSON Schema and add keywords, rather than start with another vocabulary and add the required validation to it.
 
