--- a/apps/site/src/_pages/docs/5_faq.mdx
+++ b/apps/site/src/_pages/docs/5_faq.mdx
@@ -186,7 +186,7 @@ Rich text editing is a core part of many modern block-based applications, but de
 - applications often provide special functionality inside rich text fields, e.g. being able to `@mention` or search for things inline
 
 We do not believe it feasible or desirable to impose a single rich text editing experience across applications,
-and instead have introduced the [Hook Module](https://blockprotocol.org/spec/hook-module) to allow embedding applications to
+and instead have introduced the [Hook Module](https://blockprotocol.org/spec/hook) to allow embedding applications to
 inject their own rich text editing display and input, at blocks' request.
 
 </FAQ>
@@ -234,7 +234,7 @@ We do not yet believe it necessary to specify block-application requests in Grap
 Yes, blocks can make requests to external APIs. They can do this in one of two ways:
 
 - **directly:** all of the code require to access an API can be contained within a block. This is not recommended in circumstances where a service requires an API key in order to access it, as it will be impossible to keep this key secret if a block (and for a block to remain usable) once the block is published to the [Þ Hub](https://blockprotocol.org/hub).
-- **through the Þ Hub:** in addition to blocks and types, endpoints (APIs) can also be made accessible via the Þ Hub. Currently available endpoints include _OpenAI_ and _Mapbox_. All Block Protocol users receive free credits for use with these services, and receive discounted access through Þ Hobby and Þ Pro subscriptions. Individual embedding applications can additionally override the Block Protocol API's handling of any available service, and choose to resolve these themselves, falling back to the Block Protocol's support for services or ignoring them entirely. Read more in the [Service module](https://blockprotocol.org/spec/service-module) specification.
+- **through the Þ Hub:** in addition to blocks and types, endpoints (APIs) can also be made accessible via the Þ Hub. Currently available endpoints include _OpenAI_ and _Mapbox_. All Block Protocol users receive free credits for use with these services, and receive discounted access through Þ Hobby and Þ Pro subscriptions. Individual embedding applications can additionally override the Block Protocol API's handling of any available service, and choose to resolve these themselves, falling back to the Block Protocol's support for services or ignoring them entirely. Read more in the [Service module](https://blockprotocol.org/spec/service) specification.
 
 Facilitating external API access via the Þ Hub is a new addition to the protocol, and intructions for making additional endpoints available will be added in due course. In the meantime, we're able to manually add endpoints on behalf of block developers. If there's an endpoint you'd like to use within a new or existing block, please [message us on Discord](https://blockprotocol.org/discord).
 
@@ -252,7 +252,7 @@ The ability for Þ blocks to access external services while (optionally) authent
   
 Paid external APIs can be accessed via the Block Protocol middleware, including from within Þ blocks.
   
-**In applications that ask users to insert their own Þ API keys:** some Þ embedding applications ask users to input their own Þ API key. All Þ users receive a free usage allowance for most services on the [Þ Hub](https://blockprotocol.org/hub), and Þ account holders can attach a payment method to [unlock additional access](https://blockprotocol.org/billing). Embedding applications such as [WordPress](https://blockprotocol.org/wordpress) leverage this by passing an application user's Þ API key along with their request for blocks/services.
+**In applications that ask users to insert their own Þ API keys:** some Þ embedding applications ask users to input their own Þ API key. All Þ users receive a free usage allowance for most services on the [Þ Hub](https://blockprotocol.org/hub), and Þ account holders can attach a payment method to [unlock additional access](https://blockprotocol.org/account/billing). Embedding applications such as [WordPress](https://blockprotocol.org/wordpress) leverage this by passing an application user's Þ API key along with their request for blocks/services.
   
 **In applications that use their own Þ API key, and abstract the protocol away from users:** there are multiple ways in which Þ embedding applications can provide access to paid external services, including via the Þ middleware, without requiring users to input their own API keys. For example:
   
@@ -386,7 +386,7 @@ Moving beyond a single set of constrained schemas that rarely change introduces 
 
 <FAQ question="Why JSON Schema for describing entity structure?">
 
-JSON Schema has a rich [vocabulary for validating data](https://json-schema.org/draft/2020-12/json-schema-validation.html). We designed the Block Protocol with content management systems and collaborative workspaces in mind, and being able to define precise constraints for data is important for those applications.
+JSON Schema has a rich [vocabulary for validating data](https://json-schema.org/draft/2020-12/json-schema-validation). We designed the Block Protocol with content management systems and collaborative workspaces in mind, and being able to define precise constraints for data is important for those applications.
 
 We expect to have to add custom keywords to cover relationships which JSON Schema does not have in its core vocabulary (e.g. that a property is `inverseOf` another), but believe it will be easiest to start with JSON Schema and add keywords, rather than start with another vocabulary and add the required validation to it.
 
