--- a/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
+++ b/apps/site/src/_pages/docs/1_blocks/01_environments.mdx
@@ -21,7 +21,7 @@ The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin a
 
 #### Figma
 
-**We are planning support for Block Protocol blocks in both _Figma_ and _Figjam_.** Development has not yet begun. If you are interested in getting involved, please let us know on [our Discord](https://blockprotocol.org/discord).
+**We are planning support for Block Protocol blocks in both _Figma_ and _Figjam_.** Development has not yet begun. If you are interested in getting involved, please [let us know](https://blockprotocol.org/contact).
 
 ### Other environments
 
